manifests/grafana/grafana-deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: grafana
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: grafana
    spec:
      securityContext:
        #runAsNonRoot: true
        runAsUser: 472
      containers:
      - name: grafana
        image: carlosedp/monitoring-grafana:v5.1.3
        #image: grafana/grafana:5.2.0-beta1
        volumeMounts:
        - name: grafana-config
          mountPath: /grafana/conf/config.ini
          subPath: config.ini
        - name: grafana-storage
          mountPath: /data
        - name: grafana-datasources
          mountPath: /grafana/conf/provisioning/datasources
        #- name: grafana-notification-channels
        #  mountPath: /grafana/conf/provisioning/notification-channels
        - name: grafana-dashboards
          mountPath: /grafana/conf/provisioning/dashboards
        - name: grafana-dashboard-definitions-0
          mountPath: /grafana-dashboard-definitions/0
        ports:
        - name: web
          containerPort: 3000
        resources:
          requests:
            memory: 100Mi
            cpu: 100m
          limits:
            memory: 200Mi
            cpu: 200m
      volumes:
      - name: grafana-config
        configMap:
          name: grafana-config
      #- name: grafana-storage
      #  persistentVolumeClaim:
      #    claimName: grafana-claim
      #- name: grafana-storage
      #  hostPath:
      #    #path: /data
      #    path: /var/opt
      #    type: Directory
      - name: grafana-storage
        emptyDir: {}
      - name: grafana-datasources
        configMap:
          name: grafana-datasources
      #- name: grafana-notification-channels
      #  configMap:
      #    name: grafana-notification-channels
      - name: grafana-dashboards
        configMap:
          name: grafana-dashboards
      - name: grafana-dashboard-definitions-0
        configMap:
          name: grafana-dashboard-definitions-0
