manifests/grafana/grafana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
spec:
  rules:
  # Change this to match your DNS name
  - host: grafana.thepracticalsysadmin.com
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 3000
